--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vitez",
+  "name": "manga-viewer",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.9.0",
+    "ofetch": "^1.3.4",
     "vue": "^3.4.21"
   },
   "devDependencies": {
