--- a/package.json
+++ b/package.json
@@ -9,29 +9,31 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "test": "vitest"
+    "test": "vitest",
+    "check": "cd src-tauri && cargo check"
   },
   "dependencies": {
+    "@tauri-apps/api": "^1.5.3",
     "@vueuse/core": "^10.9.0",
-    "ofetch": "^1.3.4",
-    "vue": "^3.4.21"
+    "vue": "^3.4.23"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.13.3",
+    "@antfu/eslint-config": "^2.15.0",
     "@iconify-json/carbon": "^1.1.31",
     "@iconify-json/ph": "^1.1.12",
+    "@tauri-apps/cli": "^1.5.11",
     "@types/node": "^20.12.7",
-    "@unocss/eslint-config": "^0.59.1",
+    "@unocss/eslint-config": "^0.59.3",
     "@vitejs/plugin-vue": "^5.0.4",
     "dayjs": "^1.11.10",
     "eslint": "^9.0.0",
-    "eslint-plugin-format": "^0.1.0",
-    "typescript": "^5.2.2",
-    "unocss": "^0.59.2",
+    "eslint-plugin-format": "^0.1.1",
+    "typescript": "^5.4.5",
+    "unocss": "^0.59.3",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.0",
+    "vite": "^5.2.9",
     "vitest": "^1.5.0",
-    "vue-tsc": "^2.0.6"
+    "vue-tsc": "^2.0.13"
   }
 }
