--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "packageManager": "pnpm@8.15.5",
   "scripts": {
+    "tauri": "tauri dev",
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
@@ -21,6 +22,7 @@
     "@antfu/eslint-config": "^2.15.0",
     "@iconify-json/carbon": "^1.1.31",
     "@iconify-json/ph": "^1.1.12",
+    "@iconify-json/svg-spinners": "^1.1.2",
     "@tauri-apps/cli": "^1.5.11",
     "@types/node": "^20.12.7",
     "@unocss/eslint-config": "^0.59.3",
