--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@tauri-apps/api": "^1.5.3",
     "@vueuse/core": "^10.9.0",
-    "vue": "^3.4.23"
+    "vue": "^3.4.23",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.15.0",
@@ -35,6 +36,7 @@
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.9",
+    "vite-plugin-pages": "^0.32.1",
     "vitest": "^1.5.0",
     "vue-tsc": "^2.0.13"
   }
