--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@tauri-apps/api": "^1.5.3",
     "@vueuse/core": "^10.9.0",
+    "axios": "^1.6.8",
     "vue": "^3.4.23",
     "vue-router": "^4.3.2"
   },
@@ -25,7 +26,6 @@
     "@iconify-json/ph": "^1.1.12",
     "@iconify-json/svg-spinners": "^1.1.2",
     "@tauri-apps/cli": "^1.5.11",
-    "@types/node": "^20.12.7",
     "@unocss/eslint-config": "^0.59.3",
     "@vitejs/plugin-vue": "^5.0.4",
     "dayjs": "^1.11.10",
@@ -37,6 +37,7 @@
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.9",
     "vite-plugin-pages": "^0.32.1",
+    "vite-plugin-vue-layouts": "^0.11.0",
     "vitest": "^1.5.0",
     "vue-tsc": "^2.0.13"
   }
