--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "types": [
       "vitest",
       "vite/client",
-      "vite-plugin-pages/client"
+      "vite-plugin-pages/client",
+      "vite-plugin-vue-layouts/client"
     ],
     "paths": {
       "~/*": [
